# Pong

./: CMakeLists.txt  global.cpp  global.h  main.cpp  map.cpp  map.h  pong.cpp
interface/ncurses/: ncurses.cpp  ncurses.h
keys/: keys.cpp  keys.h
map/: map.cpp  map.h
movil/bola/: bola.cpp  bola.h
movil/pala/: pala.cpp  pala.h
